Add polybar configs

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,72 +1,79 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
+;;;;;;;;;;;
+; POLYBAR ;
+;;;;;;;;;;;
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+;; Active Colors
+background = #1e1f29
+foreground-light = #f8f8f2
+foreground = #9C9C9C
+foreground-dark = #757575
+primary = #8E24AA
+secondary = #1E88E5
+
+;; Material Colors
+red = #e53935
+pink = #d81b60
+purple = #8e24aa
+deep-purple = #5e35b1
+indigo = #3949ab
+blue = #1e88e5
+light-blue = #039be5
+cyan = #00acc1
+teal = #00897b
+green = #43a047
+light-green = #7cb342
+lime = #c0ca33
+yellow = #fdd835
+amber = #ffb300
+orange = #fb8c00
+deep-orange = #f4511e
+brown = #6d4c41
+grey = #757575
+blue-gray = #546e7a
+
+
 
 [bar/polybar]
-width = 100%
-height = 24pt
-radius = 6
+;; Positioning
+width = 100%:-10pt
+height = 20pt
+radius = 8pt
 
-; dpi = 96
+offset-x = 5pt
+offset-y = 5pt
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+border-size = 2pt
+border-color = ${colors.foreground-dark}
+
+padding-left = 0pt
+padding-right = 10pt
 
 line-size = 3pt
 
-border-size = 4pt
-border-color = #00000000
+bottom = true
 
-padding-left = 0
-padding-right = 1
+;; Colors
+background = ${colors.background}
+foreground = ${colors.foreground}
 
-module-margin = 1
+;; Modules
+modules-left = bspwm xwindow
+modules-center = spotify
+modules-right = brightness audio keyboard memory cpu wifi battery date
+module-margin = 10pt
 
-separator = |
-separator-foreground = ${colors.disabled}
-
+;; Fonts
 font-0 = monospace;2
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
-
+;; Other
 cursor-click = pointer
-cursor-scroll = ns-resize
-
+cursor-scroll = pointer
 enable-ipc = true
 
-; tray-position = right
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
 
-; override-redirect = true
-
-[module/xworkspaces]
+[module/bspwm]
 type = internal/xworkspaces
 
 label-active = %name%
@@ -87,20 +94,15 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:30:...%
 
-[module/filesystem]
-type = internal/fs
-interval = 25
+[module/spotify]
+format-prefix = spotify
+format = <label>
+exec = echo Hello
+label = %output%
 
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
+[module/audio]
 type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
@@ -112,7 +114,7 @@ label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
-[module/xkeyboard]
+[module/keyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
@@ -138,6 +140,7 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
+
 [network-base]
 type = internal/network
 interval = 5
@@ -145,7 +148,7 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
-[module/wlan]
+[module/wifi]
 inherit = network-base
 interface-type = wireless
 label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
@@ -154,6 +157,17 @@ label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+[module/battery]
+type = internal/battery
+
+full-at = 100
+low-at = 10
+
+battery = BAT0
+adapter = ADP1
+
+poll-interval = 5
 
 [module/date]
 type = internal/date
