Add sound controls, CPU, RAM, wifi and bluetooth to polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -9,7 +9,7 @@ foreground-light = #f8f8f2
 foreground = #9C9C9C
 foreground-dark = #757575
 primary = #8E24AA
-secondary = #1E88E5
+secondary = #039be5
 
 ;; Material Colors
 red = #e53935
@@ -58,13 +58,26 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 ;; Modules
-modules-left = bspwm xwindow
+modules-left = bspwm bspwm-dividor xwindow
 modules-center = spotify
-modules-right = brightness audio keyboard memory cpu wifi battery date
-module-margin = 10pt
+modules-right = brightness audio keyboard memory cpu wifi bluetooth battery date
+
+module-margin = 0
+module-margin-left = 0
+module-margin-right = 0
 
 ;; Fonts
-font-0 = monospace;2
+font-0 = "RobotoMonoNerdFont:size=12;2"
+font-1 = "Font Awesome 6 Brands-Regular:size=11;2"
+font-2 = "Font Awesome 6 Free-Regular:size=11;2"
+font-3 = "Font Awesome 6 Free-Solid:size=11;2"
+; font for specific icons
+font-4 = "RobotoMonoNerdFont:size=16;3"
+font-5 = "RobotoMonoNerdFont:size=11;2"
+font-6 = "RobotoMonoNerdFont:size=14;3"
+font-7 = "RobotoMonoNerdFont:size=25;2"
+font-8 = "RobotoMonoNerdFont:size=16;4"
+font-9 = "RobotoMonoNerdFont:size=14;4"
 
 ;; Other
 cursor-click = pointer
@@ -74,46 +87,77 @@ enable-ipc = true
 
 
 [module/bspwm]
-type = internal/xworkspaces
+type = internal/bspwm
 
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+;; Spacing
+label-active = %icon%
+label-active-background = ${colors.background}
+label-active-foreground = ${colors.foreground}
+label-active-underline = ${colors.primary}
 label-active-padding = 1
 
-label-occupied = %name%
+label-occupied = %icon%
+label-occupied-foreground = ${colors.foreground}
 label-occupied-padding = 1
 
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent = %icon%
+label-urgent-background = ${colors.red}
 label-urgent-padding = 1
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
+label-empty = %icon%
+label-empty-foreground = ${colors.foreground-dark}
 label-empty-padding = 1
 
+;; Labels
+ws-icon-0 = 1;%{T5}%{T-}
+ws-icon-1 = 2;%{T6}%{T-}
+ws-icon-2 = 3;%{T2}%{T-}
+ws-icon-3 = 4;%{T1}󱚌%{T-}
+ws-icon-4 = 5;%{T7}%{T-}
+ws-icon-default = b
+
+
+
+;; Dividor bar
+[module/bspwm-dividor]
+type = custom/text
+content = %{T8}|%{T-}
+content-foreground = ${colors.foreground-dark}
+
+
+
+;; Current window
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:40:...%
+
+
 
 [module/spotify]
-format-prefix = spotify
-format = <label>
-exec = echo Hello
-label = %output%
+type = custom/script
+exec = echo "%{T7}󰝚%{T-} %{T7}󰝛%{T-} Spotify playing t...    "
+
 
 [module/audio]
 type = internal/pulseaudio
+interval = 10
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+format-volume = %{A4:pactl set-sink-volume 0 +10%:}<ramp-volume> <label-volume>%{A}
+click-right = pavucontrol
 
-label-volume = %percentage%%
+ramp-volume-0 = %{T9}󰕿%{T-}%{O-3}
+ramp-volume-1 = %{T9}󰖀%{T-}%{O-3}
+ramp-volume-2 = %{T9}󰕾%{T-}%{O-3}
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-volume = %percentage:2%%
 
+label-muted = %{T9}󰝟%{T-} %{O-3}%percentage:2%%
+label-muted-foreground = ${colors.foreground-dark}
+
+format-volume-margin = 1
+format-muted-margin = 1
+
+; TODO
 [module/keyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
@@ -122,41 +166,66 @@ label-layout = %layout%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
-label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
+
+label-indicator-margin = 1
+format-margin = 1
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+
+label = %{T9}󰆼%{T-} %{O-3}%percentage_used:2%%
+
+format-warn = <label-warn>
+label-warn = %{T9}󰆼%{T-} %{O-3}%percentage_used:2%%
+label-warn-foreground = ${colors.primary}
+
+format-margin = 2
+format-warn-margin = 2
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+
+label = %{T10}%{T-} %{O1}%percentage:2%%
+
+format-warn = <label-warn>
+label-warn = %{T10}%{T-} %{O1}%percentage:2%%
+label-warn-foreground = ${colors.primary}
+
+format-margin = 1
+format-warn-margin = 1
 
 
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/wifi]
-inherit = network-base
+type = internal/network
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+interval = 5
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+format-connected = %{A1:firefox:}%{A3:firefox:}<ramp-signal>%{A}%{A}
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤨
+
+format-disconnected = %{A1:firefox:}%{A3:firefox:}<label-disconnected>%{A}%{A}
+label-disconnected = 󰤮
+
+format-connected-margin = 1
+format-disconnected-margin = 1
+
+[module/bluetooth]
+type = custom/script
+exec = ~/.config/polybar/scripts/bluetooth.sh
+interval = 2
+click-left = exec blueberry
+click-right = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
+format-padding = 1
+
 
 [module/battery]
 type = internal/battery
@@ -168,6 +237,8 @@ battery = BAT0
 adapter = ADP1
 
 poll-interval = 5
+
+format-margin = 1
 
 [module/date]
 type = internal/date
