--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,270 +1,85 @@
-;;;;;;;;;;;
-; POLYBAR ;
-;;;;;;;;;;;
+;;;;;;;;;;;;;
+;; POLYBAR ;;
+;;;;;;;;;;;;;
 
-[colors]
-;; Active Colors
-background = #1e1f29
-foreground-light = #f8f8f2
-foreground = #9C9C9C
-foreground-dark = #757575
-primary = #8E24AA
-secondary = #039be5
 
-;; Material Colors
-red = #e53935
-pink = #d81b60
-purple = #8e24aa
-deep-purple = #5e35b1
-indigo = #3949ab
-blue = #1e88e5
-light-blue = #039be5
-cyan = #00acc1
-teal = #00897b
-green = #43a047
-light-green = #7cb342
-lime = #c0ca33
-yellow = #fdd835
-amber = #ffb300
-orange = #fb8c00
-deep-orange = #f4511e
-brown = #6d4c41
-grey = #757575
-blue-gray = #546e7a
-
-
-
-[bar/polybar]
-;; Positioning
-width = 100%:-10pt
-height = 20pt
-radius = 8pt
-
-offset-x = 5pt
-offset-y = 5pt
-
-border-size = 2pt
-border-color = ${colors.foreground-dark}
-
-padding-left = 0pt
-padding-right = 10pt
-
-line-size = 3pt
-
-bottom = true
-
-;; Colors
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-;; Modules
-modules-left = bspwm dividor xwindow
-modules-center = spotify
-modules-right = brightness audio dividor memory cpu dividor keyboard dividor wifi bluetooth dividor battery dividor date
-
-module-margin = 0
-module-margin-left = 0
-module-margin-right = 0
-
-;; Fonts
-font-0 = "RobotoMonoNerdFont:size=12;2"
-font-1 = "Font Awesome 6 Brands-Regular:size=11;2"
-font-2 = "Font Awesome 6 Free-Regular:size=11;2"
-font-3 = "Font Awesome 6 Free-Solid:size=11;2"
-; font for specific icons
-font-4 = "RobotoMonoNerdFont:size=16;3"
-font-5 = "RobotoMonoNerdFont:size=11;2"
-font-6 = "RobotoMonoNerdFont:size=14;3"
-font-7 = "RobotoMonoNerdFont:size=25;2"
-font-8 = "RobotoMonoNerdFont:size=14;4"
-font-9 = "RobotoMonoNerdFont:size=13;3"
-
-;; Other
-cursor-click = pointer
-cursor-scroll = pointer
-enable-ipc = true
-
-
-
-[module/bspwm]
-type = internal/bspwm
-
-;; Spacing
-label-active = %icon%
-label-active-background = ${colors.background}
-label-active-foreground = ${colors.foreground}
-label-active-underline = ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %icon%
-label-occupied-foreground = ${colors.foreground}
-label-occupied-padding = 1
-
-label-urgent = %icon%
-label-urgent-background = ${colors.red}
-label-urgent-padding = 1
-
-label-empty = %icon%
-label-empty-foreground = ${colors.foreground-dark}
-label-empty-padding = 1
-
-;; Labels
-ws-icon-0 = 1;%{T5}%{T-}
-ws-icon-1 = 2;%{T6}%{T-}
-ws-icon-2 = 3;%{T2}%{T-}
-ws-icon-3 = 4;%{T1}󱚌%{T-}
-ws-icon-4 = 5;%{T7}%{T-}
-ws-icon-default = b
-
-
-
-;; Dividor bar
-[module/dividor]
-type = custom/text
-content = %{T8}|%{T-}
-content-foreground = ${colors.foreground-dark}
-
-
-
-;; Current window
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:40:...%
-
-
-
-[module/spotify]
-type = custom/script
-exec = echo "%{T7}󰝚%{T-} %{T7}󰝛%{T-} Spotify playing t...    "
-
-
-[module/brightness]
-type = internal/backlight
-card = intel_backlight
-enable-scroll = true
-format = %{A4:light -A 10:}%{A5:light -U 10:}<label>%{A}%{A}%{O10}
-label = 󰖨 %percentage%%
-
-[module/audio]
-type = internal/pulseaudio
-interval = 10
-
-format-volume = %{A4:pactl set-sink-volume 0 +10%:}<ramp-volume> <label-volume>%{A}
-click-right = pavucontrol
-
-ramp-volume-0 = %{T9}󰕿%{T-}%{O-3}
-ramp-volume-1 = %{T9}󰖀%{T-}%{O-3}
-ramp-volume-2 = %{T9}󰕾%{T-}%{O-3}
-
-label-volume = %percentage:2%%
-
-label-muted = %{T9}󰝟%{T-} %{O-3}%percentage:2%%
-label-muted-foreground = ${colors.foreground-dark}
-
-
-[module/keyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-blacklist-1 = scroll-lock
-
-format = 󰌌%{O7}<label-layout><label-indicator>
-
-label-layout = %icon%
-layout-icon-0 = gb;UK
-layout-icon-1 = hu;HU
-label-indicator-on = %icon%
-label-indicator-on-capslock = %{O3}%{T7}%{T-}
-label-indicator-on-capslock-foreground = ${colors.primary}
-
-
-[module/memory]
-type = internal/memory
-interval = 2
-
-label = %{T9}󰆼%{T-} %{O-5}%percentage_used:2%%%{O10}
-
-format-warn = <label-warn>
-label-warn = %{T9}󰆼%{T-} %{O-5}%percentage_used:2%%%{O10}
-label-warn-foreground = ${colors.primary}
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-
-label = %{T10}%{T-} %percentage:2%%
-
-format-warn = <label-warn>
-label-warn = %{T10}%{T-} %percentage:2%%
-label-warn-foreground = ${colors.primary}
-
-
-[module/wifi]
-type = internal/network
-interface-type = wireless
-interval = 5
-
-format-connected = "%{A1:nm-connection-editor:}%{A3:nm-connection-editor:}<ramp-signal>%{O-3} %{A}%{A}%{O-3} "
-ramp-signal-0 = 󰤯
-ramp-signal-1 = 󰤟
-ramp-signal-2 = 󰤢
-ramp-signal-3 = 󰤥
-ramp-signal-4 = 󰤨
-
-format-disconnected = "%{A1:nm-connection-editor:}%{A3:nm-connection-editor:}<label-disconnected>%{O-3} %{A}%{A}%{O-3} "
-label-disconnected = 󰤮
-
-[module/bluetooth]
-type = custom/script
-exec = ~/.config/polybar/scripts/bluetooth.sh
-interval = 2
-click-left = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
-click-right = exec blueberry
-
-
-[module/battery]
-type = internal/battery
-poll-interval = 2
-battery = BAT0
-adapter = ADP1
-
-full-at = 100
-low-at = 10
-
-time-format = %H:%M
-
-format-charging = <label-charging>
-label-charging = 󰂄%{O6}%time%
-
-format-discharging = <ramp-capacity>%{O6}<label-discharging>
-label-discharging = %time%
-ramp-capacity-0 = 󰁺
-ramp-capacity-1 = 󰁼
-ramp-capacity-2 = 󰁾
-ramp-capacity-3 = 󰂀
-ramp-capacity-4 = 󰂂
-
-format-low = <animation-low>
-animation-low-0 = 󰂃
-animation-low-0-foreground = ${colors.primary}
-animation-low-1 = 󰂃
-animation-low-framerate = 300
-
-format-full = <label-full>
-label-full = 󰁹
-
-
-[module/date]
-type = internal/date
-interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
-format = 󰥔 <label>
-
-label = %date%
+[global/wm]
+	include-file = ~/.config/polybar/colors.ini
+	include-file = ~/.config/polybar/modules.ini
 
 [settings]
-screenchange-reload = true
-pseudo-transparency = true
+	screenchange-reload = true
+	pseudo-transparency = true
+
+[bar/main]
+	width = 100%:-10pt
+	height = 20pt
+	radius = 8pt
+
+	offset-x = 5pt
+	offset-y = 5pt
+
+	border-size = 2pt
+	border-color = ${colors.foreground-dark}
+
+	padding-left = 0pt
+	padding-right = 10pt
+
+	line-size = 3pt
+
+	bottom = true
+
+	background = ${colors.background}
+	foreground = ${colors.foreground}
+
+	modules-left = bspwm divider xwindow
+	modules-center = spotify
+	modules-right = brightness audio divider memory cpu divider keyboard divider wifi bluetooth divider battery divider date
+
+	module-margin = 0
+	module-margin-left = 0
+	module-margin-right = 0
+
+	cursor-click = pointer
+	cursor-scroll = pointer
+	enable-ipc = true
+
+	;; Regular fonts
+	font-0 = "RobotoMonoNerdFont:size=12;2"
+	font-1 = "Font Awesome 6 Brands-Regular:size=11;2"
+	font-2 = "Font Awesome 6 Free-Regular:size=11;2"
+	font-3 = "Font Awesome 6 Free-Solid:size=11;2"
+	
+	;; Icon fonts
+
+	; Divider
+	font-4 = "RobotoMonoNerdFont:size=25;2"
+
+	; BSPWM icons
+	font-5 = "RobotoMonoNerdFont:size=16;3"
+	font-6 = "RobotoMonoNerdFont:size=11;2"
+	font-7 = "RobotoMonoNerdFont:size=12;2"
+	font-8 = "RobotoMonoNerdFont:size=12;2"
+	font-9 = "RobotoMonoNerdFont:size=14;3"
+
+	; Spotify icons
+	font-10 = "RobotoMonoNerdFont:size=14;3"
+	font-11 = "RobotoMonoNerdFont:size=12;2"
+
+	; Light, volume, memory, cpu, keyboard, caps
+	font-12 = "RobotoMonoNerdFont:size=12;2"
+	font-13 = "RobotoMonoNerdFont:size=14;4"
+	font-14 = "RobotoMonoNerdFont:size=14;4"
+	font-15 = "RobotoMonoNerdFont:size=13;3"
+	font-16 = "RobotoMonoNerdFont:size=12;2"
+	font-17 = "RobotoMonoNerdFont:size=14;3"
+	
+	; Wifi, bluetooth, charge, battery, clock
+	font-18 = "RobotoMonoNerdFont:size=13;3"
+	font-19 = "RobotoMonoNerdFont:size=13;3"
+	font-20 = "RobotoMonoNerdFont:size=14;4"
+	font-21 = "RobotoMonoNerdFont:size=12;2"
+	font-22 = "RobotoMonoNerdFont:size=14;3"
+	
+
 
