Add spotify to polybar, move startup files to .xinitrc

--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -3,7 +3,7 @@
 ;;;;;;;;;;;;;;;;;;;;
 
 [colors]
-	background = #1e1f29
-	foreground = #9c9c9c
-	foreground-dark = #44475a
-	primary = #8e24aa
+	background = ${xrdb:background:#222}
+	foreground = ${xrdb:foreground:#222}
+	border = ${xrdb:color8:#222}
+	primary = ${xrdb:color4:#222}
