--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,7 +20,7 @@
 	offset-y = 5pt
 
 	border-size = 2pt
-	border-color = ${colors.foreground-dark}
+	border-color = ${colors.border}
 
 	padding-left = 0pt
 	padding-right = 10pt
@@ -32,8 +32,12 @@
 	background = ${colors.background}
 	foreground = ${colors.foreground}
 
-	modules-left = bspwm divider xwindow
-	modules-center = spotify
+;	modules-left = bspwm divider xwindow
+;	modules-center = spotify previous playpause next
+;	modules-right = brightness audio divider memory cpu divider keyboard divider wifi bluetooth divider battery divider date
+
+	modules-left = previous playpause next divider spotify
+	modules-center = bspwm
 	modules-right = brightness audio divider memory cpu divider keyboard divider wifi bluetooth divider battery divider date
 
 	module-margin = 0
@@ -80,6 +84,9 @@
 	font-20 = "RobotoMonoNerdFont:size=14;4"
 	font-21 = "RobotoMonoNerdFont:size=12;2"
 	font-22 = "RobotoMonoNerdFont:size=14;3"
+
+	; Japanese
+	font-23 = "WenQuanYi Micro Hei Mono:size=12;2"
 	
 
 
