--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -5,7 +5,7 @@
 [module/divider]
 	type = custom/text
 	content = %{T5}|%{T-}
-	content-foreground = ${colors.foreground-dark}
+	content-foreground = ${colors.border}
 
 [module/bspwm]
 	type = internal/bspwm
@@ -25,7 +25,7 @@
 	label-urgent-padding = 1
 
 	label-empty = %icon%
-	label-empty-foreground = ${colors.foreground-dark}
+	label-empty-foreground = ${colors.border}
 	label-empty-padding = 1
 
 	ws-icon-0 = 1;%{T6}%{T-}
@@ -40,8 +40,30 @@
 	label = %title:0:40:...%
 
 [module/spotify]
-	type = custom/script
-	exec = echo "%{T11}󰝚%{T-} %{T11}󰝛%{T-} Spotify playing t... %{T12}   %{T-}"
+	type = custom/ipc
+	initial = 3
+	hook-0 = echo ""
+	hook-1 = spotifyctl -q status --format '%artist%: %title%' 
+	hook-2 = echo "Select a song"
+
+[module/previous]
+	type = custom/ipc
+	initial = 2
+	hook-0 = echo ""
+	hook-1 = echo " %{A1:spotifyctl -q previous:}%{T12}%{T-}%{A}"
+
+[module/playpause]
+	type = custom/ipc
+	initial = 3
+	hook-0 = echo ""
+	hook-1 = echo " %{A1:spotifyctl -q playpause:}%{T12}%{O5}%{T-}%{A}"
+	hook-2 = echo " %{A1:spotifyctl -q playpause:}%{T12}%{O5}%{T-}%{A}"
+
+[module/next]
+	type = custom/ipc
+	initial = 2
+	hook-0 = echo ""
+	hook-1 = echo " %{A1:spotifyctl -q next:}%{T12}%{T-}%{A}"
 
 [module/brightness]
 	type = internal/backlight
@@ -64,7 +86,7 @@
 	label-volume = %percentage:2%%
 
 	label-muted = %{T9}󰝟%{T-} %{O-3}%percentage:2%%
-	label-muted-foreground = ${colors.foreground-dark}
+	label-muted-foreground = ${colors.border}
 
 [module/memory]
 	type = internal/memory
@@ -133,7 +155,7 @@
 
 	time-format = %H:%M
 
-	format-charging = %{T21}󱐋%{T-}<ramp-capacity>%{O6}<label-charging>
+	format-charging = %{T21}󱐋%{T-}%{O2}<ramp-capacity>%{O6}<label-charging>
 	label-charging = %time%
 
 	format-discharging = <ramp-capacity>%{O6}<label-discharging>
