Finish bspwm config

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -85,7 +85,7 @@
 
 	label-volume = %percentage:2%%
 
-	label-muted = %{T9}󰝟%{T-} %{O-3}%percentage:2%%
+	label-muted = %{A4:pactl set-sink-volume 0 +10%:}%{T9}󰝟%{T-} %{O-3}%percentage:2%%%{A}
 	label-muted-foreground = ${colors.border}
 
 [module/memory]
