--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,7 +18,7 @@
 	offset-x = 8pt
 	offset-y = 8pt
 
-	border-size = 2pt
+	border-size = 3
 	border-color = ${colors.border}
 
 	padding-left = 0pt
@@ -31,10 +31,6 @@
 	background = ${colors.background}
 	foreground = ${colors.foreground}
 
-;	modules-left = bspwm divider xwindow
-;	modules-center = spotify previous playpause next
-;	modules-right = brightness audio divider memory cpu divider keyboard divider wifi bluetooth divider battery divider date
-
 	modules-left = previous playpause next divider spotify
 	modules-center = bspwm
 	modules-right = brightness audio divider memory cpu divider keyboard divider wifi bluetooth divider battery divider date
@@ -46,6 +42,7 @@
 	cursor-click = pointer
 	cursor-scroll = pointer
 	enable-ipc = true
+	wm-restack = bspwm
 
 	;; Regular fonts
 	font-0 = "RobotoMonoNerdFont:size=12;2"
