add functionality to polybar bluetooth and wifi displays, add htop and ranger autostart

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -43,7 +43,7 @@
 	type = custom/ipc
 	initial = 3
 	hook-0 = echo ""
-	hook-1 = spotifyctl -q status --format '%artist%: %title%' 
+	hook-1 = spotifyctl -q status --format '%artist%: %title%' --max-length 70 --trunc '...'
 	hook-2 = echo "Select a song"
 
 [module/previous]
@@ -92,6 +92,7 @@
 	type = internal/memory
 	interval = 2
 
+	format = %{A1:alacritty -e bash -c '(cat ~/.cache/wal/sequences &) && htop':}<label>%{A}
 	label = %{T15}󰆼%{T-} %{O-5}%percentage_used:2%%%{O10}
 
 	format-warn = <label-warn>
@@ -102,6 +103,7 @@
 	type = internal/cpu
 	interval = 2
 
+	format = %{A1:alacritty -e bash -c '(cat ~/.cache/wal/sequences &) && htop':}<label>%{A}
 	label = %{T16}%{T-} %percentage:2%%
 
 	format-warn = <label-warn>
@@ -123,25 +125,15 @@
 	label-indicator-on-capslock-foreground = ${colors.primary}
 
 [module/wifi]
-	type = internal/network
-	interface-type = wireless
-	interval = 5
-
-	format-connected = "%{A1:nm-connection-editor:}%{A3:nm-connection-editor:}<ramp-signal>%{O-3} %{A}%{A}%{O-3} "
-	ramp-signal-0 = %{T19}󰤯%{T-}
-	ramp-signal-1 = %{T19}󰤟%{T-}
-	ramp-signal-2 = %{T19}󰤢%{T-}
-	ramp-signal-3 = %{T19}󰤥%{T-}
-	ramp-signal-4 = %{T19}󰤨%{T-}
-
-	format-disconnected = "%{A1:nm-connection-editor:}%{A3:nm-connection-editor:}<label-disconnected>%{O-3} %{A}%{A}%{O-3} "
-	label-disconnected = %{T19}󰤮%{T-}
+	type = custom/script
+	exec = ~/.config/polybar/scripts/network.sh
+	tail = true
 
 [module/bluetooth]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/bluetooth.sh
-	interval = 1
-	click-left = exec ~/.config/polybar/scripts/toggle_bluetooth.sh
+	tail = true
+	click-left = ~/.config/polybar/scripts/bluetooth.sh --toggle &
 	click-right = exec blueberry
 
 [module/battery]
