fix polybar tail=true causing cpu usage

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -124,17 +124,19 @@
 	label-indicator-on-capslock = %{O3}%{T18}%{T-}
 	label-indicator-on-capslock-foreground = ${colors.primary}
 
+
 [module/wifi]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/network.sh
-	tail = true
+	interval = 1
 
 [module/bluetooth]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/bluetooth.sh
-	tail = true
+	interval = 1
 	click-left = ~/.config/polybar/scripts/bluetooth.sh --toggle &
 	click-right = exec blueberry
+
 
 [module/battery]
 	type = internal/battery
