stop showing seconds on polybar clock and make icon clickable

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -174,9 +174,7 @@
 	interval = 1
 
 	date = %H:%M
-	date-alt = %Y-%m-%d %H:%M:%S
+	date-alt = %Y-%m-%d %H:%M
 
-	format = %{T23}󰥔%{T-} <label>
-
-	label = %date%
+	label = %{T23}󰥔%{T-} %date%
 
