remove bluetooth symbol due to some infinite running bug

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -33,7 +33,8 @@
 
 	modules-left = previous playpause next divider spotify
 	modules-center = bspwm
-	modules-right = brightness audio divider memory cpu divider keyboard divider wifi bluetooth divider battery divider date
+	modules-right = brightness audio divider memory cpu divider keyboard divider divider battery divider date
+	#wifi bluetooth 
 
 	module-margin = 0
 	module-margin-left = 0
